--- a/app/views/welcome/_image.html.erb
+++ b/app/views/welcome/_image.html.erb
@@ -1,8 +1,11 @@
-<section><%= image_tag("/assets/13.jpg", class: "image") %></section>
-<h2> Main colors:  <% @colors[0].each do |color| %> </h2>
-  <div class="swatch" style="background-color:<%= color[0].length >= 13 ? hexify(color[0]) : color[0] %>">
-    <div>
+<% @images.each do |image| %>
+  <section><%= image_tag("/assets/#{@images.index(image)}.jpg", class: "image") %></section>
 
+  <h2> Main colors:  <% image[:top_colors].each do |color| %> </h2>
+    <div class="swatch" style="background-color:<%= color[0].length >= 13 ? hexify(color[0]) : color[0] %>">
+      <div>
+
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
