--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,14 +1,18 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
 .swatch {
   height: 75px;
   width: 75px;
   display: inline-block;
+  border: grey solid 1px;
+  margin: 12px;
 }
 
-img {
-  width: 300px;
+.image {
+  width: 200px;
   height: auto;
-  display: inline-block;
 }
