--- a/app/views/welcome/_image.html.erb
+++ b/app/views/welcome/_image.html.erb
@@ -1,23 +1,21 @@
-<% 15.times do |image| %>
+<% @images.each do |image| %>
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <%= image_tag("#{image[:filename]}", class: "image") %>
+          <span class="card-title black-text white">Main Colors for <%="#{image[:path]}"%></span>
+        </div>
+        <div class="card-content">
+          <% image[:colors].each do |hex| %>
+            <div class="swatch" style="background-color:#<%= hex %>">
+              <div>
 
-
-<div class="row">
-  <div class="col s12 m7">
-    <div class="card">
-      <div class="card-image">
-        <%= image_tag("/assets/#{image}.jpg", class: "image") %>
-        <span class="card-title text-black">Main Colors</span>
-      </div>
-      <div class="card-content">
-        <% @hex_codes.each do |hex| %>
-          <div class="swatch" style="background-color:#<%= hex[:hex] %>">
-            <div>
-
+              </div>
             </div>
-          </div>
-        <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
 <% end %>
